@@ -503,6 +503,7 @@ cl_symbols[] = {
 {"LISTEN", CL_ORDINARY, cl_listen, -1, OBJNULL},
 {"LISTP", CL_ORDINARY, cl_listp, 1, OBJNULL},
 {"LOAD", CL_ORDINARY, cl_load, -1, OBJNULL},
+{"LOAD-LOGICAL-PATHNAME-TRANSLATIONS", CL_ORDINARY, NULL, -1, OBJNULL},
 {"LOAD-TIME-VALUE", CL_FORM, NULL, -1, OBJNULL},
 {"LOCALLY", CL_FORM, NULL, -1, OBJNULL},
 {"LOG", CL_ORDINARY, cl_log, -1, OBJNULL},
